<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.menu.GameTypeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tiny_app_header_image" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_player_mode_color"
        android:gravity="center"
        android:orientation="vertical">

        <com.am.fdamilola.bankingapp.base.classes.TButtonView
            android:id="@+id/single_player_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/single_player"
            android:textSize="@dimen/button_text_size"
            app:baseColor="@color/button_single_player_color" />

        <com.am.fdamilola.bankingapp.base.classes.TButtonView
            android:id="@+id/multi_player_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/multi_player"
            android:textSize="@dimen/button_text_size"
            app:baseColor="@color/button_multi_player_color" />

    </LinearLayout>

</LinearLayout>
